<resources>
    <string name="app_name">Pupuk.In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat Datang !"</string>
    <string name="invalid_username">Username tidak valid</string>
    <string name="invalid_password">Password harus lebih dari 5 karakter</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="title_login_page">Login</string>
    <string name="message_login_page">Login dengan akun yang sudah anda daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_register_page">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="title_register_page">Register</string>
    <string name="username">Username</string>
    <string name="password_confirm">Konfirmasi Password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="cart">Keranjang</string>
    <string name="riwayat">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="cari_dengan_ai">Cari dengan AI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_store">Home</string>
    <string name="price_format">Rp%1$d</string>
    <string name="product_sold">Terjual %1$d</string>
    <string name="description_product">Deskripsi Produk</string>
    <string name="product_stock">Stok : %1$d</string>
    <string name="full_name">Full Name</string>
    <string name="bergabung_sejak">Bergabung Sejak</string>
    <string name="lihat_profile">Lihat Profile</string>
    <string name="lihat_toko">Pindah ke Toko</string>
    <string name="store_profile">Profile</string>
    <string name="keluar">Keluar</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_store">Toko Produk</string>
    <string name="harga">Harga</string>
    <string name="product_counter">1</string>
    <string name="remove_button">hapus cart</string>
    <string name="history">Riwayat</string>
    <string name="order_date">12 Mei 2023</string>
    <string name="order_time">19.23</string>
    <string name="product_amount">40 Kg</string>
    <string name="berhasil">Berhasil</string>
    <string name="lihat">Lihat</string>
    <string name="proses">Proses</string>
    <string name="keranjang">Keranjang</string>
    <string name="tambah_produk_lain">+ Tambah Produk Lain</string>
    <string name="total_harga">Total Harga</string>
    <string name="order">Pesan</string>
    <string name="chat_button">tombol chat</string>
    <string name="banner_descripption">Banner</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="authtab">AuthTab</string>
    <string name="pupuk_untuk">Pupuk Untuk</string>
    <string name="jagung">Jagung</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_dalam_peta">Alamat dalam Peta</string>
    <string name="produk">Produk</string>
    <string name="nama_store">Nama Store</string>
    <string name="deskripsi_toko">Tentang Toko</string>
    <string name="lihat_alamat_dari_peta">Lihat Peta</string>
    <string name="ubah_profil_store">Ubah Profil Toko</string>
    <string name="unggah_foto">+ Unggah Foto</string>
    <string name="simpan">Simpan</string>
    <string name="notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesanan">Pesanan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="alamat_pada_peta">Alamat pada peta</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="beralih_sebagai_pembeli">Beralih sebagai pembeli</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="ubah_kata_sandi">Ubah kata sandi</string>
    <string name="joined_since">Bergabung Sejak %s</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="title_activity_profile_maps">ProfileMapsActivity</string>
    <string name="checkout">Checkout</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="dikirim">Dikirim</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="tunai_cod">Tunai/COD</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="detail_pengiriman">Detail Pengiriman</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="subtotal_pesanan_jumlah_produk">Subtotal Pesanan (jumlah produk)</string>
    <string name="ongkos_pengiriman">Ongkos Pengiriman</string>
    <string name="invoice">INV/01/NamaStore/050623</string>
    <string name="alamat_penerima">Alamat Penerima</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="nama_penerima_barang">Nama Penerima Barang</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="rating">4.5</string>
    <string name="stok">Stok</string>
    <string name="pesanan_berhasil">PESANAN BERHASIL</string>
    <string name="lihat_status">Lihat Status</string>
    <string name="kembali">Kembali</string>
    <string name="product_for">Diperuntukan bagi</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="store_about">Tentang Toko</string>
    <string name="product_list">Daftar Produk</string>
    <string name="filter">Filter</string>
    <string name="find_wishlist_product">Cari Produk Wishlist</string>
    <string name="wishlist">Wishlist</string>
    <string name="product_picture">Foto Produk</string>
    <string name="type">Jenis</string>
    <string name="plant">Tanaman</string>
    <string name="plant_part">Bagian Tanaman</string>
    <string name="stock">Stok</string>
    <string name="price">Harga</string>
    <string name="rp">Rp</string>
    <string name="save">Simpan</string>
    <string name="add_product">Tambah Produk</string>
    <string name="order_name">Nama Pesanan</string>
    <string name="waktu_pemesanan">Waktu Pemesanan</string>
    <string name="buyer">Pembeli</string>
    <string name="store">Toko</string>
    <string name="cancel_order">Batalkan Pemesanan</string>
    <string name="accept_order">Terima Pesanan</string>
    <string name="choose_plant">Pilih Tanaman</string>
    <string name="detection_result">Hasil Deteksi</string>
    <string name="error_detection_result">Maaf, sistem belum mampu mendeteksi</string>
    <string name="upload_another_image">Unggah Gambar Lain</string>
    <string name="deteksi_keperluan_nutrisi">Deteksi Keperluan Nutrisi</string>
    <string name="search_result_format">\"%s\"</string>
    <string name="search_result">Hasil Pencarian</string>
    <string name="no_product_show">Tidak Ada Produk</string>
    <string name="add_to_cart">Tambah Ke Keranjang</string>
    <string name="zero_num">0</string>
    <string name="stok_format_example">Stok : 1</string>
    <string name="no_history">Tidak Ada Riwayat</string>
    <string name="address_location">Alamat Lokasi</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="select_location">Pilih Lokasi</string>
    <string name="upload_image">Unggah Gambar</string>
    <string name="apakah_anda_yakin_ingin_keluar">Apakah anda yakin ingin Keluar?</string>
    <string name="ya_keluar">Ya, Keluar</string>
    <string name="tidak">Tidak</string>
    <string name="ya_simpan">Ya, Simpan</string>
    <string name="apakah_anda_yakin_menyimpan_profil">Apakah anda yakin menyimpan Profil ?</string>
    <string name="apakah_anda_yakin_menyimpan_profil_store">Apakah anda yakin menyimpan Profil Store ?</string>
    <string name="data_profil_yang_sudah_disimpan_dapat_diubah_nanti">Data profil yang sudah disimpan dapat diubah nanti</string>
    <string name="apakah_anda_yakin">Apakah anda yakin ?</string>
    <string name="ya">Ya</string>
    <string name="kamu_belum_memiliki_toko">Kamu Belum Memiliki Toko</string>
    <string name="ciptakan_peluangmu_sekarang">Ciptakan Peluangmu Sekarang</string>
    <string name="dapatkan_pelanggan_yang_tepat_pada_saat_yang_tepat">Dapatkan Pelanggan yang tepat pada saat yang tepat</string>
    <string name="buka_toko_gratis">Buka Toko Gratis</string>
    <string name="buka_toko">Buka Toko</string>
    <string name="qty_format">Jumlah: %1$d</string>
    <string name="image_process_loading">Memproses Gambar...</string>
    <string name="find_here">Cari Pupuk Disini</string>
    <string name="reset">Reset</string>
    <string name="error_detection_message">Maaf, sistem belum mampu mendeteksi</string>
    <string name="recommendation_type">Mungkin anda mencari jenis pupuk ini</string>
    <string name="find_item_with_plant">Cari pupuk sesuai tanamanmu</string>
    <string name="subtotal_pesanan_produk_format">Subtotal Pesanan (%1$d produk)</string>
    <string name="gagal">Gagal</string>
    <string name="tunai">Tunai</string>
    <string name="total_harga_format_produk">Total Harga (%1$d Produk)</string>
    <string name="no_order_left">Tidak Ada Pemesanan</string>
    <string name="belum_diproses">Belum Diproses</string>
    <string name="telah_diproses">Telah Diproses</string>
    <string name="done">Selesai</string>
    <string name="cancelled">Dibatalkan</string>
    <string name="no_cart_items">Tidak Ada Keranjang</string>
    <string name="coming_soon">Coming Soon</string>
</resources>