<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"/>

    <item android:id="@+id/aiSearchFragment"
        android:title="@string/cari_dengan_ai"
        android:icon="@drawable/baseline_screen_search_desktop_24"/>

    <item android:id="@+id/historyFragment"
        android:title="@string/riwayat"
        android:icon="@drawable/baseline_list_alt_24"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>