<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkoutItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/checkout_image_product"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productCheckoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkout_image_product"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productCheckoutStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_store"
            android:fontFamily="@font/inter"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/productCheckoutName"
            app:layout_constraintTop_toBottomOf="@+id/productCheckoutName" />

        <TextView
            android:id="@+id/productCheckoutPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/harga"
            android:textColor="@color/green_13C193"
            android:textSize="12sp"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintStart_toStartOf="@+id/productCheckoutName"
            app:layout_constraintTop_toBottomOf="@+id/productCheckoutStore" />

        <TextView
            android:id="@+id/tv_product_Checkout_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/qty_format"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="Jumlah: 2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
